--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,20 @@ body{
 }
 
 .container{
-    width: 70%;
+    width: 90%;
     margin: auto;
 }
 
+/* info su header */
 .top{
     background-color: #4ea0ff;
+    background-image: url(../img/pattern.png);
+    background-size: 300px;
+    padding-top: 50px;
+    padding-bottom: 10px;
 
+}
+
+#logo{
+    width: 200px;
 }
